--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -67,7 +67,7 @@ rules:
   value-list-comma-newline-after: never-multi-line
   value-list-comma-newline-before: always-multi-line
   value-list-comma-space-after: always
-  value-list-comma-space-before: always-single-line
+  value-list-comma-space-before: never-single-line
   value-list-max-empty-lines: 0
 
   at-rule-empty-line-before: always
