--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     {
         "brunch": "brunch/brunch",
         "postcss-brunch": "shvaikalesh/postcss-brunch",
-        "postcss-import": "^9.0.0",
-        "autoprefixer": "^6.5.3",
-        "postcss-nested": "^1.0.0",
-        "postcss-short-spacing": "^1.0.0",
-        "postcss-custom-properties": "^5.0.1",
-        "postcss-inline-svg": "^2.3.0"
+        "postcss-import": "^9",
+        "autoprefixer": "^6",
+        "postcss-nested": "^1",
+        "postcss-short-spacing": "^1",
+        "postcss-custom-properties": "^5",
+        "postcss-color-function": "^3",
+        "postcss-inline-svg": "^2"
     }
 }
