--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "postcss-brunch": "shvaikalesh/postcss-brunch",
         "postcss-import": "^9",
         "autoprefixer": "^6",
+        "postcss-nested-props": "^1",
         "postcss-nested": "^1",
         "postcss-short-spacing": "^1",
         "postcss-custom-properties": "^5",
